--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+
 * {
     box-sizing: border-box;
 }
@@ -7,22 +8,22 @@ body {
     font-family: Tahoma, Arial;
 }
 
-div.menu {
+nav {
     width: 100%;
     background-color: #4d5791;
     height: 44px;
     padding: 0 40px;
 }
 
-div.menu ul,
-div.menu ul li {
+nav ul,
+nav ul li {
     margin: 0;
     padding: 0 ;
     list-style: none;
     display: inline-block;
 }
 
-div.menu ul li a {
+nav ul li a {
     display: block;
     padding: 0 20px;
     line-height: 44px;
@@ -32,7 +33,7 @@ div.menu ul li a {
     margin: 0;
 }
 
-div.menu ul li a:hover  {
+nav ul li a:hover  {
     background-color: white;
     color: #4d5791;
 }
@@ -40,7 +41,7 @@ div.menu ul li a:hover  {
 div.hero {
     height: 350px;
     background-color: #b4c6f0;
-    background-image: url('/bg.png');
+    background-image: url('bg.png');
     background-size: 400px;
     background-repeat: no-repeat;
     background-position: center bottom;
@@ -63,7 +64,7 @@ div.hero h2 {
     color: #4d5791;
 }
 
-.container {
+main {
     padding: 40px;
     width: 100%;
 }
@@ -73,17 +74,28 @@ div.hero h2 {
     display: inline-block;
 }
 
-.bottom {
+footer {
     height: 50px;
     background-color: #b4c6f0;
     padding: 40px;
+}
+
+.skip {
+    display: block;
+    line-height: 44px;
+    padding: 0 20px;
+    margin-top: -44px;
+}
+
+.skip:focus {
+    margin-top: 0;
 }
 
 .center {
     text-align: center;
 }
 
-.container div.text-box {
+main article {
     display: inline-block;
     width: 100%;
     max-width: 340px;
@@ -92,7 +104,7 @@ div.hero h2 {
 }
 
 @media screen and (min-width: 768px) {
-    .container .div.text-box {
+    main article {
         margin: 10px;
     }
 }
